syntax = "proto3";

option csharp_namespace = "Core.Protocol.Packets";

import "Common.proto";

// 게임 서버 초기화 요청
message C2SGameServerInitRequest {
  int32 userId = 1;
  string token = 2;
  RoomData roomData = 3;
}

// 게임 서버 초기화 응답
message S2CGameServerInitResponse {
  bool success = 1;
  GlobalFailCode failCode = 2;
}

// 게임 시작 알림
message S2CGameServerInitNotification {
  GameStateData gameState = 1;
  repeated UserData users = 2;
  repeated CharacterPositionData characterPositions = 3;  // 모든 플레이어의 초기 위치
}

// 유저 위치 업데이트 요청
message C2SPositionUpdateRequest {
  double x = 1;
  double y = 2;
}

// 유저 위치 업데이트 알림
message S2CPositionUpdateNotification {
  repeated CharacterPositionData characterPositions = 1;
}

// 카드 사용 요청
message C2SUseCardRequest {
  CardType cardType = 1;
  int32 targetUserId = 2; // 타겟 없으면 0
}

// 카드 사용 응답
message S2CUseCardResponse { // 성공 여부만 반환하고 대상 유저 효과는 S2CUserUpdateNotification로 통지
  bool success = 1;
  GlobalFailCode failCode = 2;
}

// 카드 사용 알림
message S2CUseCardNotification {
  CardType cardType = 1;
  int32 userId = 2;
  int32 targetUserId = 3; // 타겟 없으면 0
}

// 카드 장착 알림
message S2CEquipCardNotification {
  CardType cardType = 1;
  int32 userId = 2;
}

// 카드 효과 알림
message S2CCardEffectNotification {
  CardType cardType = 1;
  int32 userId = 2;
  bool success = 3;
}

// 플레어 마켓 알림
message S2CFleaMarketNotification {
  repeated CardType cardTypes = 1;
  repeated int32 pickIndex = 2;
}

// 유저 업데이트 알림
message S2CUserUpdateNotification {
  repeated UserData user = 1;
}

// 빵야(공격) 당했을 경우 반응 요청
message C2SReactionRequest {
  ReactionType reactionType = 1;
}

// 빵야(공격) 당했을 경우 반응 응답
message S2CReactionResponse {
  bool success = 1;
  GlobalFailCode failCode = 2;
}